Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61009

Qt Designer (integrations): Crash when trying to create a slot when no signal is selected

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.3, 5.9.1
    • 5.9.0 Beta 4
    • Tools: Designer
    • None
    • 9f3354218321c326c05f9d4627c462c781d1714e (qttools/5.9, 29.5.2017. 5.9.1) 705d06c2841ef5d9ebda954c112fc8f1e32ec2cb (5.6, 29.5.2017, 5.6.3)

      To replicate crash:

      • Open Qt Creator
      • Create a new widgets project
      • Double click on the "*.ui" file to edit the widget with the designer within Qt Creator
      • Drag a control on the widget (e.g. a QPushButton)
      • Click with the right mouse button on the control and select "Go to slot" in the popup menu
      • Now make sure no list entry of signals is selected (deselect default selection by holding "CTRL" key) and click "OK"

        For Gerrit Dashboard: QTBUG-61009
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            ExtremoHard Mirko Marx
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes