Qt Designer: Fix crash in "Go to slot" dialog when no signal is selected

Add a check for the selection.

Task-number: QTBUG-61009
Change-Id: Ic99d8ca2b9b838b2cb24f1cf4b259c38e2a6f1ca
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 9f3354218321c326c05f9d4627c462c781d1714e)